ValidationService/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: validationservice
spec:
  template:
    spec:
      containers:
        - env:
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
