ValidationService/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: validationservice
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: validationservice
